Fix docker-compose yml

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,10 +5,7 @@ services:
     environment:
       - DJANGO_DEBUG=true
     command:
-      sh -c "
-        pytest
-        && python manage.py runserver 0.0.0.0:8000
-      "
+      [ "python", "manage.py", "runserver", "0.0.0.0:8000" ]
     ports:
       - "8000:8000"
 
