--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
+**/migrations/**
+!**/migrations
+!**/migrations/__init__.py
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -91,7 +94,7 @@ target/
 #Pipfile.lock
 
 # celery beat schedule file
-celerybeat-schedule
+celerybeat*
 
 # SageMath parsed files
 *.sage.py
