--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,12 @@ requests==2.23.0
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 
-celery
-redis
-django-redis
+celery==4.4.2
+redis==3.5.2
+django-redis==4.11.0
 
-pytest==5.4.2
-pytest-django==3.9.0
-pytest-cov==2.8.1
 mixer==6.1.3
+pytest==5.4.2
+pytest-cov==2.8.1
+pytest-django==3.9.0
 snapshottest==0.5.1
